Fix card size on mobile

--- a/zola/sass/custom.scss
+++ b/zola/sass/custom.scss
@@ -36,7 +36,7 @@
   border: 1px solid #dddddd !important;
   margin: 20px;
   border-radius: 10px;
-  width: 100%;
+  //width: 100%;
   display: flex;
   text-decoration: none !important;
 }
